[gd_scene load_steps=6 format=3 uid="uid://chbl2hygrntgp"]

[ext_resource type="Script" uid="uid://bwf5k4yd6inc6" path="res://Tanks/AI/ai_tank.gd" id="1_052c8"]
[ext_resource type="Texture2D" uid="uid://dwjc2jjj5pb3c" path="res://Assets/Tanks/Tank_Bottom_Green.png" id="2_4ceif"]
[ext_resource type="Texture2D" uid="uid://ddi5o35wsb3h8" path="res://Assets/Tanks/Tank_Top_Green.png" id="3_sn0so"]
[ext_resource type="PackedScene" uid="uid://ddb2rh7axbe0c" path="res://Assets/health_bar.tscn" id="4_esl8t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ianc"]
size = Vector2(280, 330)

[node name="AI_Tank" type="CharacterBody2D"]
scale = Vector2(0.2, 0.2)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_052c8")

[node name="TankBottomGreen" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1.78814e-07, 2.38419e-07)
rotation = 1.5708
scale = Vector2(1.33333, 1.25697)
texture = ExtResource("2_4ceif")

[node name="TankCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2.23517e-05, 2.23337e-05)
rotation = 1.5708
shape = SubResource("RectangleShape2D_7ianc")

[node name="TankTopGreen" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(-5.96046e-08, 0)
scale = Vector2(1.51536, 1.51536)
texture = ExtResource("3_sn0so")

[node name="FirePoint" type="Marker2D" parent="TankTopGreen"]
unique_name_in_owner = true
position = Vector2(2.02857, -178.361)

[node name="Fire_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Fire" type="ColorRect" parent="."]
visible = false
z_index = 2
offset_left = -155.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 90.0
color = Color(1, 0.596078, 0, 1)

[node name="Attack_Speed" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 50.0
max_speed = 20000.0
debug_enabled = true

[node name="HealthBar" parent="." instance=ExtResource("4_esl8t")]
offset_left = 124.008
offset_top = 90.1878
offset_right = 225.008
offset_bottom = 117.188
rotation = -1.56803

[connection signal="timeout" from="Fire_Timer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Attack_Speed" to="." method="_on_attack_speed_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
